If the start/end stop does not coincide with the start/end of the gradient, repeat the first/last color
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/FOP-2393_gradient-rendering@1609507 13f79535-47bb-0310-9956-ffa450edef68